--- a/estadisticas/index.html
+++ b/estadisticas/index.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-default">
             <div class="container-fluid container">
                 <div class="row">
-                    <div id="alignment-example" class="collapse navbar-collapse bg-gray">
+                    <div id="alignment-example" class="collapse navbar-collapse">
                         <ul class="nav navbar-nav main-menu">
                             <li class="">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="Notificaciones">Notificaciones<span class="caret"></span></a>
@@ -27,7 +27,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="../estadisticas/index.html">Estadísticas</a>
+                                <a href="">Estadísticas</a>
                             </li>
                             <li class="">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Configuración<span class="caret"></span></a>
@@ -36,103 +36,100 @@
                                     <li><a href="">Rol</a></li>
                                 </ul>
                             </li>
+                            <li class="">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Raúl Perez<span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="">Salir</a></li>
+                                </ul>
+                            </li>
                         </ul>
-                            <ul class="nav navbar-nav main-menu pull-right">
-                                <li>
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Raúl Perez<span class="caret"></span></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="">Salir</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
                     </div>
                 </div>
-                            
             </div>
         </nav>
     </header>
+    <section class="jumbotron"></section>
     <main>
         <div class="container">
             <div class="row">
                 <section>
                     <article class="row">
                         <div class="col-md-12">
-                            <h1 class="h3 m-t-2">Panel de notificaciones</h1>
+                            <h1 class="h4 m-t-2">Campañas realizadas</h1>
                             <hr>
-                            <button onclick="location.replace('./nueva.html')" class="btn btn-success btn-sm pull-right">+ Nueva notificación</button>
                             <div>
                                 <section>
-                                    <h2 class="h4">Notificaciones en proceso</h2>
+                                    <h2 class="h4">Todas las notificaciones</h2>
                                     <table class="table table-responsive-poncho table-striped">
                                     <thead>
                                         <tr>
-                                            <th><p class="text-muted">Nombre</p></th>
                                             <th><p class="text-muted">Campaña</p></th>
+                                            <th><p class="text-muted">Nombre</p></th>
                                             <th><p class="text-muted">Fecha</p></th>
-                                            <th><p class="text-muted">Accion</p></th>
+                                            <th><p class="text-muted">Efectividad</p></th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Prevení el Dengue</td>
                                             <td>Dengue</td>
-                                            <td>AAAA/MM/DD</td>
-                                            <td><button  class="btn btn-primary btn-sm" onclick="location.replace('./editar.html')">Editar</button></td>
+                                            <td>Dengue en NOA</td>
+                                            <td>2024/04/09</td>
+                                            <td>93,3</td>
+                                            <td><button  class="btn btn-primary btn-sm" onclick="location.replace('./ver.html')">Ver estadísticas</button></td>
                                         </tr>
                                         <tr>
-                                            <td>Notificación 6</td>
-                                            <td>-</td>
-                                            <td>AAAA/MM/DD</td>
-                                            <td><button class="btn btn-primary btn-sm">Editar</button></td>
+                                            <td>Subsidios</td>
+                                            <td>Otorgamiento mayores</td>
+                                            <td>2024/04/11</td>
+                                            <td>98,1</td>
+                                            <td><button class="btn btn-primary btn-sm">Ver estadísticas</button></td>
                                         </tr>
                                         <tr>
-                                            <td>Notificación 7</td>
-                                            <td>Campaña C</td>
+                                            <td>Voucher</td>
+                                            <td>Voucher educativos</td>
                                             <td>AAAA/MM/DD</td>
-                                            <td><button class="btn btn-primary btn-sm">Editar</button></td>
+                                            <td>88,3</td>
+                                            <td><button class="btn btn-primary btn-sm">Ver estadísticas</button></td>
                                         </tr>
                                         <tr>
-                                            <td>Notificación 8</td>
+                                            <td>Vacaciones</td>
                                             <td>Campaña B</td>
                                             <td>AAAA/MM/DD</td>
-                                            <td><button class="btn btn-primary btn-sm">Editar</button></td>
+                                            <td>99</td>
+                                            <td><button class="btn btn-primary btn-sm">Ver estadísticas</button></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Dengue</td>
+                                            <td>Dengue en NOA</td>
+                                            <td>2024/04/09</td>
+                                            <td>93,3</td>
+                                            <td><button  class="btn btn-primary btn-sm" onclick="location.replace('./ver.html')">Ver estadísticas</button></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Subsidios</td>
+                                            <td>Otorgamiento mayores</td>
+                                            <td>2024/04/11</td>
+                                            <td>98,1</td>
+                                            <td><button class="btn btn-primary btn-sm">Ver estadísticas</button></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Voucher</td>
+                                            <td>Voucher educativos</td>
+                                            <td>AAAA/MM/DD</td>
+                                            <td>88,3</td>
+                                            <td><button class="btn btn-primary btn-sm">Ver estadísticas</button></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Vacaciones</td>
+                                            <td>Campaña B</td>
+                                            <td>AAAA/MM/DD</td>
+                                            <td>99</td>
+                                            <td><button class="btn btn-primary btn-sm">Ver estadísticas</button></td>
                                         </tr>
                                     </tbody>
                                     </table>
                                 </section>
-                                <section>
-                                    <h2 class="h4">Notificaciones realizadas</h2>
-                                    <table class="table table-responsive-poncho table-striped">
-                                    <thead>
-                                        <tr>
-                                            <th><p class="text-muted">Nombre</p></th>
-                                            <th><p class="text-muted">Campaña</p></th>
-                                            <th><p class="text-muted">Fecha</p></th>
-                                            <th><p class="text-muted">Accion</p></th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>Notificación 1</td>
-                                            <td>Campaña A</td>
-                                            <td>AAAA/MM/DD</td>
-                                            <td><button class="btn btn-primary btn-sm" onclick="location.replace('./ver.html')">Ver</button></td>
-                                        </tr>
-                                        <tr>
-                                            <td>Notificación 2</td>
-                                            <td>Campaña B</td>
-                                            <td>AAAA/MM/DD</td>
-                                            <td><button class="btn btn-primary btn-sm">Ver</button></td>
-                                        </tr>
-                                        <tr>
-                                            <td>Notificación 3</td>
-                                            <td>Campaña C</td>
-                                            <td>AAAA/MM/DD</td>
-                                            <td><button class="btn btn-primary btn-sm">Ver</button></td>
-                                        </tr>
-                                    </tbody>
-                                    </table>
-                                </section>
+
                                 <div class="text-center">
                                     <ul class="pagination">
                                         <li class="active">
@@ -159,6 +156,8 @@
                                         </li>
                                     </ul>
                                 </div>
+                                <button type="button" class="btn btn-link" onclick="location.replace('/notificaciones/index.html')">Volver</button>
+
                             </div>
                         </div>
                     </article>
