--- a/plantillas/index.html
+++ b/plantillas/index.html
@@ -27,7 +27,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="">Estadísticas</a>
+                                <a href="../estadisticas/index.html">Estadísticas</a>
                             </li>
                             <li class="">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Configuración<span class="caret"></span></a>
@@ -53,12 +53,13 @@
             <div class="row">
                 <div class="col-md-12">
                     <button type="button" class="btn btn-success btn-sm" onclick="location.replace('./nueva.html')">+ Nueva plantilla</button>
-                    <h1>Plantillas</h1>
+                    <h1 class="h4">Plantillas</h1>
+                    <hr>
                     <section id="notificacion_en_proceso">
                         <table class="table table-responsive-poncho table-striped">
                             <thead>
-                                <th>Nombre</th>
-                                <th>Accion</th>
+                                <th><p class="text-muted">Nombre</p></th>
+                                <th><p class="text-muted">Acción</p></th>
                             </thead>
                             <tr>
                                 <td>Dengue A</td>
