--- a/plantillas/editar.html
+++ b/plantillas/editar.html
@@ -30,7 +30,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="">Estadísticas</a>
+                                <a href="../estadisticas/index.html">Estadísticas</a>
                             </li>
                             <li class="">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
@@ -57,76 +57,64 @@
     <main>
         <div class="container">
             <div class="row">
-                <form>
-                    <fieldset>
-                        <legend>
-                            <h2>Edición de plantilla</h2>
-                        </legend>
-
-                        <label for="nombre">Título de la plantilla</label>
-                        <input type="text" placeholder="Prevení el Dengue">
-                        <figcaption>Extensión máxima: 65 carácteres</figcaption>
-
-
-                        <label for="campania">Texto de la plantilla</label>
-                        <textarea
-                            placeholder="Es muy importante descartar todos los objetos que puedan servir de criadero del mosquito. Recordá acercarte a un centro de salud en caso de que presentes síntomas. Para más información ingresa a argentina.gob.ar/dengue"></textarea>
-                        <figcaption>Extensión máxima: 65 carácteres</figcaption>
-
-                        <label for="imagen">Imagen</label>
-                        <input type="file">
-                        <figcaption>Extensión máxima de tamaño: 1mb. Formatos aceptados: JPEG, PNG, BMP</figcaption>
-
-                        <div class="form-group item-form">
-                            <input type="radio" value="Notificacion destacada">
-                            <label class="radio-inline">imagen ícono</label><br>
-
-                            <input type="radio" value='Seccion "novedades"'>
-                            <label class="radio-inline"> imagen hero </label><br>
-
+                <div class="col-md-12">
+                    <h1 class="h4">Edición de plantilla</h1>
+                    <hr>
+                    <form>
+                        <div>
+                            <fieldset>
+                                <div class="form-item webform-component webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group">
+                                    <label  class="control-label">Título de la plantilla</label>
+                                    <input class="form-control form-text required" type="text" placeholder="Prevení el Dengue">
+                                    <p class="help-block error">Extensión máxima: 65 carácteres</p>
+                                </div>
+                                <div class="class=form-item webform-component webform-component-textarea webform-component--textarea form-group form-item form-item-submitted-textarea form-type-textarea form-group">
+                                    <label class="control-label">Texto de la plantilla</label>
+                                    <div class="form-textarea-wrapper resizable textarea-processed resizable-textarea">
+                                        <textarea class="form-control form-textarea required" cols="60" rows="5" placeholder="Ingresar el cuerpo del mensaje"></textarea>
+                                    </div>
+                                    <p class="help-block error">Extensión máxima: 65 carácteres</p>
+                                </div>
+                                <div class="form-managed-file input-group">
+                                    <label class="control-label">Archivo adjunto</label>
+                                    <input class="form-control form-file required" type="file">
+                                    <p class="help-block error">Extensión máxima de tamaño: 1mb. Formatos aceptados: JPEG, PNG, BMP</p>
+                                </div>
+                                <div class="form-managed-file input-group">
+                                    <label class="control-label">Imagen de fondo</label>
+                                    <input class="form-control form-file required" type="file">
+                                    <p class="help-block error">Extensión máxima de tamaño: 1mb. Formatos aceptados: JPEG, PNG, BMP</p>
+                                </div>
+                                
+                                    <div class="form-group item-form">
+                                        <fieldset>
+                                            <legend>
+                                                <label>Icono-imagen-push</label>
+                                            </legend>
+                                            <div class="form-group item-form">
+                                                <label class="radio-inline">
+                                                    <input type="radio">                                                
+                                                    imagen ícono
+                                                </label>
+                                                <label class="radio-inline"> 
+                                                <input type="radio">
+                                                    imagen hero 
+                                                </label>
+                                            </div>
+                                    </div>
+                                </fieldset>
+                                <div class="form-item webform-component webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group">
+                                    <label class="control-label">Link</label>
+                                    <input class="form-control form-text required">
+                                </div>
+                                <button type="button" class="btn btn-success">Guardar</button>
+                                <button type="button" onclick="location.replace('./index.html')" class="btn btn-danger">Cancelar</button>        
+                            </fieldset>
                         </div>
-
-                        <label for="link">Link</label>
-                        <input>
-
-                        <div class="checkbox">
-                            <input type="checkbox" id="destacada" name="destacada" value="Notificacion destacada">
-                            <label for="destacada">Notificación destacada</label><br>
-
-                            <input type="checkbox" id="novedades" name="novedades" value='Seccion "novedades"'>
-                            <label for="novedades"> Sección "novedades" </label><br>
-                        </div>
-
-                        <div class="checkbox">
-                            <button type="button">Guardar</button>
-                            <button type="button">Cancelar</button>
-                        </div>
-
-                        <table class="table table-responsive-poncho table-striped">
-                            <thead>
-                                <thead>Configuración de notificación</th>
-                                </thead>
-                                <tr>
-                                    <td>Medio</td>
-                                    <td><button onclick="location.replace('./medio.html')">Ver</button></td>
-                                </tr>
-                                <tr>
-                                    <td>Fecha</td>
-                                    <td><button>Ver</button></td>
-                                </tr>
-                                <tr>
-                                    <td>Destinatarios</td>
-                                    <td><button>Ver</button></td>
-                                </tr>
-                        </table>
-                        <button type="button" onclick="location.replace('./index.html')">Volver</button>
-
-                    </fieldset>
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
-
-
     </main>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Bootstrap JS -->
